# SimpleCalculatorGTest

./: .gitignore  CMakeLists.txt  InMemoryHistory.cpp  README.md  SimpleCalculator.cpp  SimpleCalculator.h  SimpleCalculatorTest.cpp  coverage.info
